syntax = "proto3";
package specy.specy;

option go_package = "specy/x/specy/types";

message Task {
  string taskHash = 1; 
  string contractAddress = 2; 
  string method = 3; 
  string calldata = 4; 
  bool single = 5; 
  string ruleFile = 6; 
  
}

